# DiaryManagement

./: CMakeLists.txt  README.md  cell.c  lvl_list.c  lvl_list.h  main.c  timer.h  tools.c  tools.h
Part2_analysis/: get_timer_data.c  log_2.txt  log_3.txt  log_variables.mat  running_time_analysis.mlx
Part_1-2/: cell.c  cell.h  copy_main_1.c  copy_main_2.c  log_1.txt  lvl_list.c  lvl_list.h  running_time_analysis.mlx
Part_3/: appointment.c  appointment.h  contact.c  contact.h  contact_list.c  contact_list.h  copy_main_3.c  menu.c  menu.h
